# AI_Agent

./: .gitignore  README.md  main.py  pyproject.toml  tests.py  tox.ini
.github/workflows/: deploy_docs.yml
docs/: requirements.txt
docs/source/: ai_agent.calculator.pkg.rst  ai_agent.calculator.rst  ai_agent.functions.rst  ai_agent.rst  conf.py  index.rst  modules.rst
src/ai_agent/: agent.py  config.py  constants.py  discovery.py  exceptions.py  main.py  schema.py
src/ai_agent/calculator/: calc.py
src/ai_agent/calculator/pkg/: calculator.py  render.py
src/ai_agent/functions/: file_content.py  files.py  files_info.py  get_file_content.py  get_files_info.py  run_python.py  run_python_file.py  utils.py  write_file.py
tests/: conftest.py  test_calculator.py  test_file_content.py  test_file_info.py  test_files_info.py  test_function_calls.py  test_functions.py  test_run_python.py  test_write_file.py  utils.py
