# ==============================================================================
# pyproject.toml
# ==============================================================================

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# --- Project Metadata ---
[project]
name = "ai_agent"
version = "0.1.0"
description = "A brief description of your project."
authors = [{ name = "Bryan Cora", email = "bcora2018@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/brinwiththevlin/ai_agent"
repository = "https://github.com/brinwiththevlin/ai_agent"

# --- Development and Tooling Dependencies ---
[project.optional-dependencies]
lint = ["ruff", "pyright"]
test = ["pytest", "coverage"]
doc = ["sphinx"]
build = ["build[virtualenv]==1.0.3"]
dev = [
    "tox",
    "pre-commit",
    "interrogate",
    "ai_agent[lint]",
    "ai_agent[test]",
    "ai_agent[doc]",
    "ai_agent[build]",
]

# --- Tool Configurations ---

[tool.pyright]
include = ["src/ai_agent"]
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true

[tool.interrogate]
fail-under = 80
ignore-module = true

# ==============================================================================
# Ruff Configuration (Linter and Formatter)
# ==============================================================================
[tool.ruff]
# General settings apply to both the linter and formatter
line-length = 120
src = ["src"]
extend-exclude = ["conf.py", "**/__init__.py"]
target-version = "py312"

# --- Linter Specific Settings ---
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Conflicts with the formatter
    "T201",   # in most cased print statments are ok, this is a CLI project
    "ISC001", # Conflicts with the formatter
    "PT001",  # Pytest rules that are a matter of style preference
    "G004",   # logging with f-strings is ok imo
    "PT023",
    "FBT001",
    "FBT002",
]
# Plugin-specific settings are defined as inline tables here
pyupgrade = { keep-runtime-typing = true }
pydocstyle = { convention = "google" }

# Per-file-ignores is a sub-table of the lint section
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D100", "D102", "D103", "PT009", "T201"]
"**/__init__.py" = ["F401", "F403"]
"docs/**" = ["INP001"]
"src/**/agent.py" = ["T201"]
"src/**/constants.py" = ["E501"]

# --- Formatter Specific Settings ---
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
